--- a/index.html
+++ b/index.html
@@ -34,10 +34,29 @@
     #start:hover{
         background-color: #166bb5;
     }
+
+    input[type="text"]{
+        padding: 5px 10px;
+        border-radius: 4px;
+        border: none;
+        border: 1px solid #357ebd;
+    }
+
+    .group{
+        margin: 10px 5px;
+    }
     </style>
 </head>
 
 <body>
+    <div class="group">
+        <label for="source">源地址:</label>
+        <input type="text" name="source" id="source" value="C:/Users/Administrator/Desktop/">
+    </div>
+    <div class="group">
+        <label for="target">目标地址:</label>
+        <input type="text" name="target" id="target" value="F:/blogShortCut/">
+    </div>
     <button id="start">整理桌面图片</button>
     <!--打印运行log-->
     <p class="logger">日志打印:</p>
