--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
         <label for="target">目标地址:</label>
         <input type="text" name="target" id="target" value="F:/blogShortCut/">
     </div>
+    <div class="group">
+        <label for="target">是否同步到七牛:</label>
+        <input type="radio" name="sync" value="qiniu" checked>
+        <input type="radio" name="sync" value="noqiniu">
+    </div>
     <button id="start">整理桌面图片</button>
     <!--打印运行log-->
     <p class="logger">日志打印:</p>
